crates/compiler/src/tests/e2e/bad/0032_constructor_extra_args_triangle/main.gom
enum Shape {
    Circle(float64),
    Rect(float64, float64),
    Triangle(float64, float64, float64),
}

fn area(s: Shape) -> float64 {
    match s {
        Shape::Circle(r) => 3.14159 * r * r,
        Shape::Rect(w, h) => w * h,
        Shape::Triangle(a, b, _c, _d) => 0.5 * a * b,
    }
}

fn main() {
    let s = Shape::Triangle(6.0, 8.0, 10.0);
    println(float64_to_string(area(s)));
}
